# draft-smith

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  LICENSE.md  PROJECT_SPEC.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: frontend.md  rust.md  settings.json
.claude/agents/: code-reviewer.md  rust-engine.md  ui-builder.md
.claude/hooks/: block-destructive.ps1  format-after-edit.ps1
.github/workflows/: ci.yml  release.yml
scripts/: mock-live-server.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  updater.rs
src-tauri/src/ddragon/: cache.rs  champions.rs  error.rs  fetch.rs  icons.rs  items.rs  mod.rs  version.rs
src-tauri/src/engine/: aggregate.rs  classify.rs  corpus.rs  durability.rs  explain.rs  focus.rs  input.rs  mod.rs  rank.rs  skill.rs
src-tauri/src/engine/snapshots/: draftsmith_lib__engine__corpus__ahri_vs_captured_ad_assassin_comp.snap  draftsmith_lib__engine__corpus__jinx_vs_tank_frontline.snap  draftsmith_lib__engine__corpus__ornn_vs_ap_burst_comp.snap  draftsmith_lib__engine__corpus__sett_vs_heavy_healing_comp.snap
src-tauri/src/history/: mod.rs  model.rs  recorder.rs  store.rs
src-tauri/src/live_client/: client.rs  error.rs  mod.rs  model.rs
src-tauri/src/live_client/fixtures/: allgamedata.json
src-tauri/src/meta/: cache.rs  error.rs  fetch.rs  mod.rs  parse.rs
src-tauri/src/meta/fixtures/: overview_ahri.json
src-tauri/src/meta/snapshots/: draftsmith_lib__meta__parse__tests__snapshot_resolved_build.snap
src-tauri/src/model/: champion.rs  ddragon.rs  engine.rs  game.rs  gank.rs  item.rs  meta.rs  mod.rs  settings.rs  status.rs
src-tauri/src/poll/: gank.rs  mod.rs
src-tauri/src/rules/: mod.rs
src-tauri/src/rules/data/: ability_damage.json  champion_profiles.json  counters.json  item_intents.json  jungle_timings.json  skill_orders.json
src/components/: Dashboard.tsx  Footer.tsx  Header.tsx
src/components/gank/: GankAlertOverlay.test.tsx  GankAlertOverlay.tsx
src/components/history/: IdleHome.test.tsx  IdleHome.tsx  MatchDetail.test.tsx  MatchDetail.tsx  MatchHistory.test.tsx  MatchHistory.tsx  MatchScrubber.tsx  matchFormat.test.ts  matchFormat.ts  matchTimeline.test.ts  matchTimeline.ts
src/components/icons/: ChampionAvatar.tsx  ItemIcon.tsx
src/components/settings/: SettingsDialog.test.tsx  SettingsDialog.tsx
src/components/skill/: SkillStrip.test.tsx  SkillStrip.tsx
src/components/states/: Connecting.tsx  ErrorState.tsx  NoGame.test.tsx  NoGame.tsx  Stats.tsx
src/components/swaps/: SwapStrip.tsx
src/components/threat/: EnemyItemsPanel.test.tsx  EnemyItemsPanel.tsx  EnemyRow.test.tsx  EnemyRow.tsx  EnemyThreatBoard.tsx  FocusCallout.test.tsx  FocusCallout.tsx  enemyItemsHelpers.ts  intent-visuals.ts  signal-visuals.ts
src/components/ui/: badge.tsx  dialog.tsx  select.tsx  skeleton.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/hooks/: useAppVersion.ts  useBuildShiftToasts.ts  useChangelog.ts  useConnectionStatus.ts  useDdragonStatus.ts  useDdragonVersion.ts  useGameState.ts  useGankAlert.ts  useIcon.ts  useLastUpdated.ts  useMatch.ts  useMatchHistory.ts  useMetaBuild.ts  useRecommendation.ts  useSettings.ts  useTauriEvent.ts  useThemeSync.ts  useUpdateCheck.test.tsx  useUpdateCheck.ts
src/lib/: abilityKeys.test.ts  abilityKeys.ts  buildShift.test.ts  buildShift.ts  events.ts  gankSound.ts  labels.ts  queryClient.ts  tauri.ts
src/store/: ui.ts
src/test/: loop.test.tsx  setup.ts
