[package]
name = "draftsmith"
version = "0.1.0"
description = "DraftSmith — live, matchup-aware item recommendations for League of Legends"
authors = ["DraftSmith"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "draftsmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
# DDragon HTTP client: kept separate from the M2 Live Client client. reqwest 0.13's default TLS
# is rustls validated by the OS trust store (rustls-platform-verifier) — no system OpenSSL.
# `json` adds typed body (de)serialization.
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
# A throwaway local HTTP server for testing the Live Client poller against captured
# `/allgamedata` JSON, so M2 is verifiable without launching League (PROJECT_SPEC §9, M2).
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
