[package]
name = "draftsmith"
version = "0.1.15"
description = "DraftSmith — live, matchup-aware item recommendations for League of Legends"
authors = ["DraftSmith"]
license = ""
repository = "https://github.com/Blackyfi/draft-smith"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "draftsmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `protocol-asset` serves the DDragon icon cache to the webview via Tauri's asset protocol
# (convertFileSrc), scoped to `$APPDATA/ddragon/**` in tauri.conf.json (M4 icon loading).
tauri = { version = "2.11.2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
# M6 packaging: a native dialog for the "update available / up to date" prompt. The updater
# plugin itself is desktop-only (see target section below); the relaunch after install uses the
# built-in `AppHandle::restart`, so no extra process plugin is needed.
tauri-plugin-dialog = "2"
# DDragon HTTP client: kept separate from the M2 Live Client client. reqwest 0.13's default TLS
# is rustls validated by the OS trust store (rustls-platform-verifier) — no system OpenSSL.
# `json` adds typed body (de)serialization.
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
thiserror = "2"

# Auto-updater is desktop-only (no in-app update on mobile app stores). This predicate is Tauri's
# definition of `desktop` (= not mobile); keep it in lockstep with the `#[cfg(desktop)]` gates in
# `lib.rs`, `tray.rs`, and `updater.rs` so the crate and its uses are enabled on the same targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
# Snapshot-testing the engine's explained recommendation output (PROJECT_SPEC §5.4, M3).
insta = { version = "1", features = ["yaml"] }
# A throwaway local HTTP server for testing the Live Client poller against captured
# `/allgamedata` JSON, so M2 is verifiable without launching League (PROJECT_SPEC §9, M2).
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
